--- a/ProyectoGrafos/src/Ventanas/interfazRegistroDistancia.form
+++ b/ProyectoGrafos/src/Ventanas/interfazRegistroDistancia.form
@@ -70,12 +70,12 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="jButtonActualizarLista">
+    <Component class="javax.swing.JButton" name="jButtonSeleccionarLista">
       <Properties>
-        <Property name="text" type="java.lang.String" value="ACTUALIZAR LISTA"/>
+        <Property name="text" type="java.lang.String" value="SELECCIONAR LISTA"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonActualizarListaActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSeleccionarListaActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -117,6 +117,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="verticeOrigen">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verticeOrigenActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="190" y="330" width="50" height="40"/>
