Corregi unos errores

--- a/ProyectoGrafos/src/Ventanas/interfazRegistroDistancia.form
+++ b/ProyectoGrafos/src/Ventanas/interfazRegistroDistancia.form
@@ -127,6 +127,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="verticeNuevo">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verticeNuevoActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="190" y="370" width="50" height="40"/>
