--- a/ProyectoGrafos/src/Ventanas/interfazMenu.form
+++ b/ProyectoGrafos/src/Ventanas/interfazMenu.form
@@ -107,7 +107,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Imagenes/wallpaper.jpg"/>
+          <Image iconType="3" name="/Imagenes/fondo1.jpg"/>
         </Property>
       </Properties>
       <Constraints>
