--- a/ProyectoGrafos/src/Ventanas/interfazRegistro.form
+++ b/ProyectoGrafos/src/Ventanas/interfazRegistro.form
@@ -31,9 +31,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="24" style="1"/>
         </Property>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="66" green="99" red="0" type="rgb"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="REGISTRO CLIENTE"/>
       </Properties>
       <Constraints>
@@ -197,7 +194,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Imagenes/wallpaper.jpg"/>
+          <Image iconType="3" name="/Imagenes/amaverde.jpg"/>
         </Property>
       </Properties>
       <Constraints>
