--- a/ProyectoGrafos/src/Ventanas/interfazDelivery.form
+++ b/ProyectoGrafos/src/Ventanas/interfazDelivery.form
@@ -72,6 +72,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="idDestino">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="idDestinoActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="300" y="410" width="50" height="30"/>
@@ -79,6 +82,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="outputCaminoMasCorto">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="outputCaminoMasCortoActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="10" y="530" width="720" height="30"/>
