--- a/ProyectoGrafos/src/Ventanas/interfazDelivery.form
+++ b/ProyectoGrafos/src/Ventanas/interfazDelivery.form
@@ -82,6 +82,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="outputCaminoMasCorto">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="outputCaminoMasCortoActionPerformed"/>
       </Events>
@@ -146,6 +149,9 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTextPane" name="Salida">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -210,6 +216,9 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTextPane" name="clientesRegistrados">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
