--- a/ProyectoGrafos/src/Ventanas/interfazDeRegistro.form
+++ b/ProyectoGrafos/src/Ventanas/interfazDeRegistro.form
@@ -164,7 +164,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Distancia Entre los Vertices :"/>
+        <Property name="text" type="java.lang.String" value="Distancia Entre los V&#xe9;rtices :"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
