--- a/ProyectoGrafos/src/Ventanas/interfazDeRegistro.form
+++ b/ProyectoGrafos/src/Ventanas/interfazDeRegistro.form
@@ -88,6 +88,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="nombreRegistro">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nombreRegistroActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="10" y="100" width="280" height="-1"/>
